# Humanoid-SDK

./: README.md
.github/workflows/: ros-ci.yml
dynamixel_sdk_examples/src/: read_write_node.cpp
humanoid_sdk/: CMakeLists.txt  package.xml
humanoid_sdk/include/: HumanoidSDK.hpp
humanoid_sdk/include/humanoid_sdk/: HumanoidSDK.hpp
humanoid_sdk/src/: HumanoidSDK.cpp  humanoid_sdk_example.cpp  read_write_multi.cpp  read_write_node.cpp  util.cpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/humanoid_sdk/share/humanoid_sdk/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
